Small updates
Former-commit-id: 8d6045c0e01fc49d3db1d92d8728b7c04a6b4880